--- a/Revels'18/Other/Base.lproj/LaunchScreen.storyboard
+++ b/Revels'18/Other/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels18 Logo 1" translatesAutoresizingMaskIntoConstraints="NO" id="Yx1-lV-4Kc">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Revels18_Logo1" translatesAutoresizingMaskIntoConstraints="NO" id="Yx1-lV-4Kc">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
                         </subviews>
@@ -38,6 +38,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Revels18 Logo 1" width="697" height="1027.43994140625"/>
+        <image name="Revels18_Logo1" width="1300" height="1300"/>
     </resources>
 </document>
